--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -5,6 +5,9 @@
         "paths": {
             "c/anything-gantt": [
                 "anythingGantt/anythingGantt.js"
+            ],
+            "c/moment-js": [
+                "momentJS/momentJS.js"
             ]
         }
     },
